@@ -1,5 +1,11 @@
 2017-08-15  Ben Elliston  <bje@gnu.org>
 
+	* lib/framework.exp (xml_tag): New proc.
+	(log_summary): Use it.
+	(record_test): Likewise.
+
+2017-08-15  Ben Elliston  <bje@gnu.org>
+
 	* lib/framework.exp (open_logs): Set .xml filename correctly.
 	* runtest.exp: Remove xml_file_name var.
 	(usage): Update --xml option to not take an argument.
